# temporal-graph-rag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  code-quality.yml  tests.yml
assets/: architecture.mmd  ares_eval.csv  demo.cast
benchmarks/: latency_profile.py  temporal_hotpot.py
data/: eval_samples.jsonl
demo/: cli_demo.py
demos/: temporal_graph_rag_demo.ipynb
evaluation/: ares_eval.py
infrastructure/: docker-compose.yml  setup_popos.sh
notebooks/: temporal_reasoning_demo.ipynb
scripts/: record_demo.sh  render_architecture.sh
src/temporal_graph_rag/: __init__.py  cli.py  engine.py  retrievers.py  types.py
src/temporal_graph_rag/api/: main.py  ui.py
src/temporal_graph_rag/ingestion/: temporal_indexer.py
src/temporal_graph_rag/temporal/: algebra.py
tests/: test_engine.py  test_temporal_algebra.py
